--- a/index.css
+++ b/index.css
@@ -1,3 +1,14 @@
+/* @import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';
+
+body {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+} */
+header {
+    width: 60%;
+    margin: 1rem auto;
+    text-align: center;
+}
+
 main {
     width: 60%;
     margin: 1rem auto;
@@ -9,4 +20,20 @@ main {
 
 .template {
     display: none;
+}
+
+.button {
+    /* background-color: #e81c4f !important; */
+    margin-bottom: 0;
+}
+
+.flick {
+    background: #f5f7f9;
+    border-bottom: 1px solid #d8dee9;
+    border-left: 2px solid #69c;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.actions {
 }
